微信小程序 更改了recipe的图标 图片路径在data下，再用三元表达式切换 search搜索，本地存储功能待开发，改变了些样式，还是low，最好不带颜色。

--- a/pages/recipe/recipe.wxml
+++ b/pages/recipe/recipe.wxml
@@ -22,7 +22,9 @@
         </view>
         <view class="subtitle-view" bindtap="tapSub">
             <text class="subtitle">{{tags[0].title}} · {{recipe.date}}</text>
-            <icon class="right" animation="{{a2}}" type="success" size="25" color="{{isFav?'red':'orange'}}"/>
+            <!--<icon class="right" animation="{{a2}}" type="waiting" size="25" rotate="45" color="{{isFav?'red':'orange'}}"/>-->
+            <image src="../../images/less.png" class="right" animation="{{a2}}"  type="success"
+                   color="{{isFav?'red':'orange'}}"></image>
         </view>
         <view animation="{{animationData}}" class="desc-view" >
             <view wx:if="{{draw}}" bindtap="tapSub">
@@ -40,12 +42,14 @@
             </view>
         </view>
         <view class="buttons">
-            <view class="button" bindtap="tapFav" >
-                <icon type="success" size="25" color="{{isFav?'red':'orange'}}"/>
+            <view class="button" bindtap="tapShare" >
+                <icon type="success" size="25" color="{{isShare?'red':'orange'}}"/>
                 <text>{{share}}</text>
             </view>
             <view class="button" bindtap="tapFav" >
-                <icon type="success" size="25" color="{{isFav?'red':'orange'}}"/>
+                <!--<icon type="success" size="25"  color="{{isFav?'red':'orange'}}"/>-->
+                <image src="{{isFav?iconP:uiconP}}" class="icon-image"   type="success"
+                       color="{{isFav?'red':'orange'}}">{{iconP}}</image>
                 <text>{{favorite}}</text>
             </view>
         </view>
