--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -1,4 +1,37 @@
-
+.search{
+    width: 735rpx;
+    height: 65rpx;
+    padding: 12.5rpx 0 12.5rpx 15rpx;
+    background: #2A8CE5;
+}
+.search-left{
+    flex: 8;
+    background: #4EA3E7;
+    text-align: left;
+}
+.search-left input{
+    display: inline-block;
+    height: 65rpx;
+    font-size: 26rpx;
+}
+.search-placeholder{
+    color: #8CCEFD;
+    line-height: 20rpx;
+}
+.search .search-left image{
+    display: inline-block;
+    width: 35rpx;
+    height: 35rpx;
+    padding: 15rpx 15rpx 15rpx 20rpx;
+}
+.search .search-right{
+    flex: 1;
+}
+.search .search-right image{
+    width: 45rpx;
+    height: 45rpx;
+    padding: 10rpx;
+}
 
 
 
