--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -35,7 +35,7 @@
 
 <view class="result">
 <!--wx:if="{{text.length}}"-->
-<view class="result-title" >
+<view class="result-title" wx:if="{{!display}}">
            <!--url="../recipeList/recipeList?sort=keyword&term={{text}}&title={{text}}-->
 
         <navigate class="result-view"  wx:if="{{text.length}}" data-id="{{text}}"  bindtap="toResult">
@@ -49,12 +49,34 @@
         <view class="result-view result-tag-view" wx:for="{{tags}}"
               data-id="{{item.objectId}}"
               data-title="{{item.title}}"
-              bindtap="toTag">
+              bindtap="toTag"
+        >
             <text class="result-text">{{item.title}}</text>
         </view>
     </navigate>
 </view>
-<view class="hot">
+<view wx:if="{{display}}">
+<navigate class="tag-button"  >
+<!--url="../recipeList/recipeList?sort=tag&term={{item.objectId}}&title={{item.title}}">-->
+    <view wx:if="{{disable}}">
+        <view class="hot-title-view">
+            <text class="hot-title-text">搜索记录</text>
+            <icon bindtap="toClear"
+          class="icon"type="clear" size="12" color="#ccc"/>
+        </view>
+        <view class="result-view result-tag-view"  bindtap="toCaption"
+      data-id="{{item.id}}"
+      data-key="{{item.key}}"
+      data-title="{{item.title}}"
+      wx:for="{{caption}}">
+    <!--data-id="{{item.objectId}}"-->
+    <!--data-title="{{item.title}}"-->
+    <!--bindtap="toTag"-->
+    <       text class="result-text">{{item.title?item.title:item.key}}</text>
+        </view>
+    </view>
+</navigate>
+<view class="hot" wx:if="{{display}}">
     <view class="hot-title-view">
         <text class="hot-title-text">流行搜索</text>
     </view>
@@ -66,21 +88,8 @@
             </navigator>
         </view>
     </view>
-    <navigate class="tag-button" >
-        <!--url="../recipeList/recipeList?sort=tag&term={{item.objectId}}&title={{item.title}}">-->
-        <view class="hot-title-view">
-        <text class="hot-title-text">搜索记录</text>
-        <icon url="../recipeList/recipeList?sort=tag&term={{item.id}}&title={{item.title}}"
-                class="icon"type="clear" size="12" color="#ccc"/>
-        </view>
-        <view class="result-view result-tag-view" wx:for="{{caption}}">
-            <!--data-id="{{item.objectId}}"-->
-            <!--data-title="{{item.title}}"-->
-            <!--bindtap="toTag"-->
-            <text class="result-text">{{item.title}}</text>
-            <text class="result-text">{{item.key}}</text>
-        </view>
-    </navigate>
+</view>
+</view>
 
 
 <!--用button 还是navigator 都待定-->
@@ -90,7 +99,6 @@
         <!--<view id="{{item.objectId}}" data-title="{{item.title}}" bindtap="tapTag">{{item.title}}</view>-->
     <!--</view>-->
 <!--</view>-->
-</view>
 
 
 
