编辑了视频提交的界面，css样式很low，提交了title和url，定义了两个开关，用自定义属性分别判断，text。length，只有在两个开关都true的情况下，才能点击提交按钮。遇到了form的坑，事件bindsubmit绑定。按钮disabled属性中写三元表达式。 正则表达式 过滤空格

--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -15,15 +15,23 @@
     margin: 20rpx;
     border-radius: 50%;
 }
-.info_list{
-    display:inline-block;
-    margin-left: auto;
-    margin-right: auto;
+.info{
+    /*display:inline-block;*/
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 .weui_cell_hd{
-
-    font-size: 14px;
+    font-size: 25rpx;
     color: #939393;
     padding: 15rpx;
 
+
+    border-bottom: 1px solid #ccc;
 }
+.weui_cell_hd:last-child {
+    border: none;
+}
+
