--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -3,14 +3,24 @@
     <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
     <text class="userinfo-nickname">{{userInfo.nickName}}</text>
 </view>
-        <view class="info_list">
-            <view class="weui_cell_hd" bindtap="{{toSub}}">投稿</view>
+
+
+
+
+        <view class="info">
+            <view class="weui_cell_hd" bindtap="toSub">投稿</view>
             <view class="weui_cell_hd">用户协议</view>
             <view class="weui_cell_hd">服务条款</view>
             <view class="weui_cell_hd">版权说明</view>
             <view class="weui_cell_hd">关于</view>
-    </view>
+        </view>
+
+
+
+
 </view>
+
+
 
 
 
