改变了一些css样式，bootstrap的css样式本来可以稳定风格，但是半路杀出，所以对代码结构改动太大，微信小程序也没有这么多html标签，一般都是<view>

--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -9,7 +9,7 @@
            <!--bindinput="input" bindchange="search" placeholder-class="search-placeholder"/>-->
     <!--</view>-->
     <!--</view>-->
-    <view class="search flex-wrp">
+    <view class="search">
         <view class="search-left flex-item">
             <image src="../../images/search.png"></image>
             <input placeholder="{{subtitle}}" placeholder-class="search-placeholder"
