--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -8,11 +8,11 @@
 
 
         <view class="info">
-            <view class="weui_cell_hd" bindtap="toSub">投稿</view>
-            <view class="weui_cell_hd">用户协议</view>
-            <view class="weui_cell_hd">服务条款</view>
-            <view class="weui_cell_hd">版权说明</view>
-            <view class="weui_cell_hd">关于</view>
+            <navigator hover-class="navigator-hover" class="weui_cell_hd" bindtap="toSub">投稿</navigator>
+            <navigator hover-class="navigator-hover" class="weui_cell_hd">用户协议</navigator>
+            <navigator hover-class="navigator-hover" class="weui_cell_hd">服务条款</navigator>
+            <navigator hover-class="navigator-hover" class="weui_cell_hd">版权说明</navigator>
+            <navigator hover-class="navigator-hover" class="weui_cell_hd">关于</navigator>
         </view>
 
 
