--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,13 +1,15 @@
 .container {
     background-color: #F2f2f2 ;
     text-align:center;
+    padding:20rpx;
 }
 .userinfo {
     display: flex;
     flex-direction: column;
     padding: 50rpx 0;
     align-items: center;
-    background: #8CCEFD;
+    /*background: #8CCEFD;*/
+    background: #3d3d3f;
 }
 .userinfo-avatar {
     width: 128rpx;
