--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -2,7 +2,7 @@
     width: 735rpx;
     height: 65rpx;
     padding: 12.5rpx 0 12.5rpx 15rpx;
-    background: #2A8CE5;
+    background: #fff;
 }
 .search-left{
     flex: 8;
