--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,7 +1,7 @@
 <view class="container">
 <view class="userinfo">
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-    <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+    <!--<image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>-->
+    <!--<text class="userinfo-nickname">{{userInfo.nickName}}</text>-->
 </view>
 
 
