--- a/pages/common/movie-list.wxml
+++ b/pages/common/movie-list.wxml
@@ -16,9 +16,7 @@
   </navigator>
 </template>
 
-<!-- 在北美电影排行的API中数据格式与普通的API不同，这里是渲染北美电影排行的数据 -->
-<!-- 例如：https://api.douban.com/v2/movie/us_box?count=1 -->
-<template name="item2">
+<!--<template name="item2">
   <navigator url="../item/item?id={{item.subject.id}}">
     <view class="item">
       <image class="poster" src="{{item.subject.images.small}}"></image>
@@ -32,7 +30,7 @@
       </view>
     </view>
   </navigator>
-</template>
+</template>-->
 <!-- 电影列表组件 供每一个列表展示的页面使用 -->
 <template name="movie-list">
   <scroll-view scroll-y="true" class="page-body" bindscrolltolower="loadMore">
