因为微信限制只能跳转5层，所以需要在第第五层之前，加上wx.redirectTo (关闭当前页，跳转) 。  wx.navigateTo（保留当前页，跳转有点坑）。可以用getCurrentPages() 返回一个数组，数组的长度就是当前层数。 模板的概念 template name="a  定义模板 import：文件位置    template is="a" 使用模板

--- a/pages/recipe/recipe.wxml
+++ b/pages/recipe/recipe.wxml
@@ -1,16 +1,11 @@
 <!-- 电影明细 -->
-<import src="../component/recipe-list.wxml"/>
-<!--<template name="thumb">-->
-    <!--<navigator url="../recipe/recipe?id={{item.objectId}}&title={{item.title}}">-->
-        <!--<view class="thumb">-->
-            <!--<image class="thumb-image" src="{{item.image}}?imageView2/1/w/320/h/180"/>-->
-            <!--<view class="thumb-right">-->
-                <!--<text class="thumb-right-title">{{item.title}}</text>-->
-                <!--<text class="thumb-right-subtitle">{{item.tag.title}} · {{item.date}}</text>-->
-            <!--</view>-->
-        <!--</view>-->
-    <!--</navigator>-->
-<!--</template>-->
+<!--<import src="../component/recipe-list.wxml"/>-->
+<template name="thumb">
+    <!--url="../recipe/recipe?id={{item.objectId}}&title={{item.title}}"-->
+
+
+
+</template>
 
 <loading hidden="{{!loading}}">
 加载中...
@@ -39,9 +34,10 @@
                     <text class="desc">{{recipe.desc}} 来源{{recipe.cook.username}}</text>
                 </view>
                 <view  class="tags">
-                    <navigator class="tag-button" wx:for="{{tags}}" url="../recipeList/recipeList?sort=tag&term={{item.objectId}}&title={{item.title}}">
+                    <view class="tag-button" wx:for="{{tags}}"
+                          data-idfive="{{item.objectId}}" data-titlefive="{{item.title}}" bindtap="tapTag" >
                         <text class="tag-button-text">{{item.title}}</text>
-                    </navigator>
+                    </view>
                 </view>
             </view>
         </view>
@@ -60,7 +56,16 @@
     </view>
     <!--关联列表-->
     <view class="thumb-view">
-        <template is="thumb" data="{{item}}" wx:for="{{recipes}}"/>
+        <!--<template is="thumb" />-->
+        <view data="{{item}}" wx:for="{{recipes}}">
+        <view class="thumb"  data-idfive="{{item.objectId}}" data-titlefive="{{item.title}}" bindtap="tapFive">
+            <image class="thumb-image" src="{{item.image}}?imageView2/1/w/320/h/180"/>
+            <view class="thumb-right">
+                <text class="thumb-right-title">{{item.title}}</text>
+                <text class="thumb-right-subtitle">{{item.tag.title}} · {{item.date}}</text>
+            </view>
+        </view>
+        </view>
     </view>
     <view class="tips">
         <view wx:if="{{hasMore}}">
