navigator 这个标签只带点击动画。

--- a/pages/component/recipe-list.wxml
+++ b/pages/component/recipe-list.wxml
@@ -2,7 +2,7 @@
 <template name="recipe-list">
 <scroll-view scroll-y="true" class="recipe-list-body" bindscrolltolower="loadMore">
     <view  data="{{item}}" wx:for="{{recipes}}">
-    <view data-idfive="{{item.objectId}}" data-titlefive="{{item.title}}" bindtap="tapFive">
+    <navigator data-idfive="{{item.objectId}}" data-titlefive="{{item.title}}" bindtap="tapFive">
         <view class="recipeFull">
             <image src="{{item.image}}?imageView2/1/w/750/h/421"/>
             <view class="cover">
@@ -10,7 +10,7 @@
                 <text class="subtitle">{{item.tag.title}} · {{item.date}} · {{item.duration}}</text>
             </view>
         </view>
-    </view>
+    </navigator>
     </view>
     <view class="tips">
         <view wx:if="{{hasMore}}">
