--- a/pages/recipe/recipe.wxml
+++ b/pages/recipe/recipe.wxml
@@ -34,10 +34,10 @@
                     <text class="desc">{{recipe.desc}} 来源{{recipe.cook.username}}</text>
                 </view>
                 <view  class="tags">
-                    <view class="tag-button" wx:for="{{tags}}"
+                    <navigator class="tag-button" wx:for="{{tags}}"
                           data-idfive="{{item.objectId}}" data-titlefive="{{item.title}}" bindtap="tapTag" >
                         <text class="tag-button-text">{{item.title}}</text>
-                    </view>
+                    </navigator>
                 </view>
             </view>
         </view>
@@ -57,14 +57,15 @@
     <!--关联列表-->
     <view class="thumb-view">
         <!--<template is="thumb" />-->
-        <view data="{{item}}" wx:for="{{recipes}}">
-        <view class="thumb"  data-idfive="{{item.objectId}}" data-titlefive="{{item.title}}" bindtap="tapFive">
+        <view  class="thumb" data="{{item}}" wx:for="{{recipes}}"
+              data-idfive="{{item.objectId}}" data-titlefive="{{item.title}}" bindtap="tapFive">
+        <navigator class="thumbclicd" >
             <image class="thumb-image" src="{{item.image}}?imageView2/1/w/320/h/180"/>
             <view class="thumb-right">
                 <text class="thumb-right-title">{{item.title}}</text>
                 <text class="thumb-right-subtitle">{{item.tag.title}} · {{item.date}}</text>
             </view>
-        </view>
+        </navigator>
         </view>
     </view>
     <view class="tips">
