--- a/pages/recipe/recipe.wxss
+++ b/pages/recipe/recipe.wxss
@@ -111,13 +111,17 @@
 }
 
 .thumb {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    /*background-color: #fff;*/
-    /*height:240rpx;*/
-    padding: 20rpx;
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    width:100%;
+    padding: 20rpx ;
     border-top: 1rpx solid #eee;
+}
+.thumbclicd{
+    display: flex;
+    width:95%;
+    justify-content:center;
+
 }
 
 .thumb-image {
@@ -130,7 +134,7 @@
     display: flex;
     flex-direction: column;
     padding-left: 20rpx;
-    /*padding-top: 10rpx;*/
+    padding-top: 10rpx;
     width: 370rpx
 }
 
