微信分享接口没有开通，没有粘贴功能。实在不行只能用<text>让他们长按粘贴。 对标签的模板加了一个判定 storm=‘tag’ 之前的清除记录的开关，简直蠢爆了。直接根据caption.length判断显示，还没有之前的坑。

--- a/pages/recipe/recipe.wxml
+++ b/pages/recipe/recipe.wxml
@@ -44,7 +44,7 @@
         <view class="buttons">
             <view class="button" bindtap="tapShare" >
                 <icon type="success" size="25" color="{{isShare?'red':'orange'}}"/>
-                <text>{{share}}</text>
+                <text>{{share}}aaa</text>
             </view>
             <view class="button" bindtap="tapFav" >
                 <!--<icon type="success" size="25"  color="{{isFav?'red':'orange'}}"/>-->
