--- a/pages/recipeList/recipeList.wxml
+++ b/pages/recipeList/recipeList.wxml
@@ -1,2 +1,5 @@
 <import src="../component/recipe-list.wxml"/>
+
+
+<view wx:if="{{share}}">标签</view>
 <template is="recipe-list" data="{{ recipes, loading, hasMore, loadMore }}"/>
