--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -49,7 +49,7 @@
 <view wx:if="{{display}}">
 <navigator class="tag-button"  >
 <!--url="../recipeList/recipeList?sort=tag&term={{item.objectId}}&title={{item.title}}">-->
-    <view wx:if="{{disable}}">
+    <view wx:if="{{caption.length>0}}">
         <view class="hot-title-view">
             <text class="hot-title-text">搜索记录</text>
             <icon bindtap="toClear"
