定义了标签页！ leancloud有一条数据为空，微信提高报错水平了。所以一直不通。 在服务器上取值的方式 av.cloud.run('服务器方法',{键:值}，{remote:true}).then((o)=>{ console.log(o)}).catch(err)=>({ console.log(err)})  传了个tkl淘口令  页面显示，直接在page.data中定义的 {{键}}  做了一个清除搜索输入框的按钮  通过改变input的value值 来绑定input框  wx：if会重新渲染，所以flex有坑  我直接 position: absolute绝对定位 输入字体14pt  flex的文档挺清楚http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html是好文章

--- a/pages/recipeList/recipeList.wxml
+++ b/pages/recipeList/recipeList.wxml
@@ -1,5 +1,6 @@
 <import src="../component/recipe-list.wxml"/>
 
+<!--<view>{{title}}</view>-->
+<!--<text wx:if="{{share}}">{{tkl}}</text>-->
 
-<view wx:if="{{share}}">标签</view>
 <template is="recipe-list" data="{{ recipes, loading, hasMore, loadMore }}"/>
