--- a/pages/recipe/recipe.wxml
+++ b/pages/recipe/recipe.wxml
@@ -1,4 +1,3 @@
-<!-- 电影明细 -->
 <!--<import src="../component/recipe-list.wxml"/>-->
 <template name="thumb">
     <!--url="../recipe/recipe?id={{item.objectId}}&title={{item.title}}"-->
@@ -9,78 +8,80 @@
 
 <loading hidden="{{!loading}}">
 <view>
-加载中...
+    加载中...
 </view>
 </loading>
 <block>
 <view wx:if="{{loaded}}">
-<scroll-view scroll-y="true" wx:if="{{recipe.title}}" bindscrolltolower="loadMore">
+    <scroll-view scroll-y="true" wx:if="{{recipe.title}}" bindscrolltolower="loadMore">
 
 
-    <view class="head">
-        <video class="video" src="{{src}}" binderror="videoErrorCallback"></video>
-        <view class="title-view">
-            <text class="title">{{recipe.title}}</text>
+        <view class="head">
+            <video class="video" src="{{src}}" binderror="videoErrorCallback"></video>
+            <view class="title-view">
+                <text class="title">{{recipe.title}}</text>
+            </view>
+            <view class="subtitle-view" bindtap="tapSub">
+                <text class="subtitle">{{tags[0].title}} · {{recipe.date}}</text>
+                <image src="../../images/less.png" class="right" animation="{{a2}}"  type="success"
+                       color="{{isFav?'red':'orange'}}"></image>
+            </view>
+            <view animation="{{animationData}}" class="desc-view" >
+                <view wx:if="{{draw}}" bindtap="tapSub">
+                    <text class="desc" >{{desc}}</text>
+                </view>
+                <view wx:else>
+                    <view bindtap="tapSub">
+                        <text class="desc">{{recipe.desc}} 来源{{recipe.cook.username}}</text>
+                    </view>
+                    <view  class="tags">
+                        <navigator class="tag-button"  bindtap="tapTag"
+                                    wx:for="{{tags}}" data-idfive="{{item.objectId}}"
+                                   data-titlefive="{{item.title}}">
+
+                            <text class="tag-button-text">{{item.title}}</text>
+                        </navigator>
+                    </view>
+                </view>
+            </view>
+            <view class="buttons">
+                <view class="button" bindtap="tapShare" >
+                    <icon type="success" size="25" color="{{isShare?'red':'orange'}}"/>
+                    <text>{{share}}</text>
+                </view>
+                <view class="button" bindtap="tapFav" >
+
+                    <image src="{{isFav?iconP:uiconP}}" class="icon-image"   type="success"
+                           color="{{isFav?'red':'orange'}}">{{iconP}}</image>
+                    <text>{{favorite}}</text>
+                </view>
+            </view>
         </view>
-        <view class="subtitle-view" bindtap="tapSub">
-            <text class="subtitle">{{tags[0].title}} · {{recipe.date}}</text>
-            <image src="../../images/less.png" class="right" animation="{{a2}}"  type="success"
-                   color="{{isFav?'red':'orange'}}"></image>
+        <!--关联列表-->
+        <view class="thumb-view">
+            <view  class="thumb" data="{{item}}" wx:for="{{recipes}}"
+                   data-idfive="{{item.objectId}}" data-titlefive="{{item.title}}" bindtap="tapFive">
+                <navigator class="thumbclicd" >
+                    <image class="thumb-image" src="{{item.image}}?imageView2/1/w/320/h/180"/>
+                    <view class="thumb-right">
+                        <text class="thumb-right-title">{{item.title}}</text>
+                        <text class="thumb-right-subtitle">{{item.tag.title}} · {{item.date}}</text>
+                    </view>
+                </navigator>
+            </view>
         </view>
-        <view animation="{{animationData}}" class="desc-view" >
-            <view wx:if="{{draw}}" bindtap="tapSub">
-                <text class="desc" >{{desc}}</text>
+        <view class="tips">
+            <view wx:if="{{hasMore}}">
+                <image src="/images/loading.gif" mode="aspectFill"/>
+                <text>玩了命的加载中...</text>
             </view>
             <view wx:else>
-                <view bindtap="tapSub">
-                    <text class="desc">{{recipe.desc}} 来源{{recipe.cook.username}}</text>
-                </view>
-                <view  class="tags">
-                    <navigator class="tag-button" wx:for="{{tags}}"
-                          data-idfive="{{item.objectId}}" data-titlefive="{{item.title}}" bindtap="tapTag" >
-                        <text class="tag-button-text">{{item.title}}</text>
-                    </navigator>
-                </view>
+                <text>没有更多内容了</text>
             </view>
         </view>
-        <view class="buttons">
-            <view class="button" bindtap="tapShare" >
-                <icon type="success" size="25" color="{{isShare?'red':'orange'}}"/>
-                <text>{{share}}aaa</text>
-            </view>
-            <view class="button" bindtap="tapFav" >
-
-                <image src="{{isFav?iconP:uiconP}}" class="icon-image"   type="success"
-                       color="{{isFav?'red':'orange'}}">{{iconP}}</image>
-                <text>{{favorite}}</text>
-            </view>
-        </view>
-    </view>
-    <!--关联列表-->
-    <view class="thumb-view">
-        <view  class="thumb" data="{{item}}" wx:for="{{recipes}}"
-              data-idfive="{{item.objectId}}" data-titlefive="{{item.title}}" bindtap="tapFive">
-        <navigator class="thumbclicd" >
-            <image class="thumb-image" src="{{item.image}}?imageView2/1/w/320/h/180"/>
-            <view class="thumb-right">
-                <text class="thumb-right-title">{{item.title}}</text>
-                <text class="thumb-right-subtitle">{{item.tag.title}} · {{item.date}}</text>
-            </view>
-        </navigator>
-        </view>
-    </view>
-    <view class="tips">
-        <view wx:if="{{hasMore}}">
-            <image src="/images/loading.gif" mode="aspectFill"/>
-            <text>玩了命的加载中...</text>
-        </view>
-        <view wx:else>
-            <text>没有更多内容了</text>
-        </view>
-    </view>
 
 
-</scroll-view>
+    </scroll-view>
 </view>
 <view wx:else>
     <view>aaa</view>
