定义了标签页！ leancloud有一条数据为空，微信提高报错水平了。所以一直不通。 在服务器上取值的方式 av.cloud.run('服务器方法',{键:值}，{remote:true}).then((o)=>{ console.log(o)}).catch(err)=>({ console.log(err)})  传了个tkl淘口令  页面显示，直接在page.data中定义的 {{键}}  做了一个清除搜索输入框的按钮  通过改变input的value值 来绑定input框  wx：if会重新渲染，所以flex有坑  我直接 position: absolute绝对定位 输入字体14pt  flex的文档挺清楚http://www.ruanyifeng.com/blog/2015/07/flex-grammar.html是好文章

--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -54,7 +54,7 @@
 </navigate>
 </view>
 <block wx:if="{{display}}">
-<navigator class="tag-button"  >
+<!--<navigator class="tag-button"  >-->
     <!--url="../recipeList/recipeList?sort=tag&term={{item.objectId}}&title={{item.title}}">-->
     <view wx:if="{{caption.length>0}}">
         <view class="hot-title-view">
@@ -62,7 +62,7 @@
             <icon bindtap="toClear"
                   class="icon" type="clear" size="12" color="#ccc"/>
         </view>
-        <view class="result-view result-tag-view"  bindtap="toCaption"
+        <navigator class="result-view result-tag-view"  bindtap="toCaption"
               data-id="{{item.id}}"
               data-key="{{item.key}}"
               data-title="{{item.title}}"
@@ -71,20 +71,19 @@
             <!--data-title="{{item.title}}"-->
             <!--bindtap="toTag"-->
             <text class="result-text">{{item.title?item.title:item.key}}</text>
-        </view>
+        </navigator>
     </view>
-</navigator>
+<!--</navigator>-->
 <view class="hot" wx:if="{{display}}">
     <view class="hot-title-view">
         <text class="hot-title-text">流行搜索</text>
     </view>
     <view class="hot-button-view">
-        <view class="hot-button" wx:for="{{hot}}">
-            <navigator class="hot-button"
-                       url="../recipeList/recipeList?sort=tag&term={{item.objectId}}&title={{item.title}}">
+        <navigator class="hot-button" wx:for="{{hot}}"  url="../recipeList/recipeList?sort=tag&term={{item.objectId}}&title={{item.title}}">
+            <view class="hot-button">
                 <text class="hot-button-text">{{item.title}}</text>
-            </navigator>
-        </view>
+            </view>
+        </navigator>
     </view>
 </view>
 </block>
