--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -1,65 +1,129 @@
-.search{
-    width: 735rpx;
-    height: 90rpx;
-    padding: 12.5rpx 0 12.5rpx 15rpx;
-    background: #fff;
-}
-.search-left{
-    /*flex: 8;*/
+/*.search{*/
+    /*width: 735rpx;*/
+    /*height: 90rpx;*/
+    /*padding: 12.5rpx 0 12.5rpx 15rpx;*/
+    /*background: #fff;*/
+/*}*/
+/*.search-left{*/
+    /*!*flex: 8;*!*/
 
+    /*display: flex;*/
+    /*background: #4EA3E7;*/
+    /*!*flex-wrap: nowrap;*!*/
+    /*!*text-align: left;*!*/
+    /*margin-top: 6rpx;*/
+    /*height: 90rpx;*/
+    /*!*justify-content: space-between;*!*/
+    /*align-items: center;*/
+
+/*}*/
+/*.input{*/
+    /*position: absolute;*/
+    /*overflow: hidden;*/
+    /*flex-basis: auto;*/
+    /*top:20rpx;*/
+    /*left:75rpx;*/
+    /*height: 50rpx;*/
+    /*font-size: 17pt;*/
+/*}*/
+/*.clear{*/
+    /*position: absolute;*/
+    /*right:20rpx;*/
+    /*top:50rpx;*/
+    /*height:28rpx;*/
+
+    /*width:28rpx;*/
+/*}*/
+/*.search-left input{*/
+    /*display: inline-block;*/
+    /*flex-basis: auto;*/
+    /*height: 80rpx;*/
+    /*font-size: 17pt;*/
+/*}*/
+/*.search-placeholder{*/
+    /*color: #8CCEFD;*/
+    /*!*line-height: 20rpx;*!*/
+/*}*/
+
+/*.search-left image{*/
+    /*display: inline-block;*/
+    /*flex-basis: auto;*/
+    /*width: 40rpx;*/
+    /*height: 40rpx;*/
+    /*padding: 15rpx 15rpx 15rpx 20rpx;*/
+/*}*/
+
+/*.search-right{*/
+    /*flex: 1;*/
+/*}*/
+/*.search-right image{*/
+    /*width: 45rpx;*/
+    /*height: 45rpx;*/
+    /*padding: 10rpx;*/
+/*}*/
+.weui-search-bar {
+    position: relative;
+    padding: 8px 10px;
     display: flex;
-    background: #4EA3E7;
-    /*flex-wrap: nowrap;*/
-    /*text-align: left;*/
-    margin-top: 6rpx;
-    height: 90rpx;
-    /*justify-content: space-between;*/
-    align-items: center;
-
+    box-sizing: border-box;
+    background-color: #EFEFF4;
 }
-.input{
+.weui-search-bar_form {
+    position: relative;
+    flex: auto;
+    background: #FFFFFF;
+    box-sizing: border-box;
+    border: 1px solid #E6E6EA;
+    border-radius: 10px;
+}
+.weui-search-bar_form:after {
     position: absolute;
-    overflow: hidden;
-    flex-basis: auto;
-    top:20rpx;
-    left:75rpx;
-    height: 50rpx;
-    font-size: 17pt;
+    left: 0;
+    top: 0;
+    width: 200%;
+    height: 200%;
+    transform-origin: 0 0;
+    border-radius: 10px;
+
+
+    background: #FFFFFF;
 }
-.clear{
+.weui-search-bar_box {
+    position: relative;
+    padding-left: 35px;
+    padding-right: 35px;
+    /*height: 100%;*/
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 1;
+}
+.weui-image-search{
     position: absolute;
-    right:20rpx;
-    top:40rpx;
-    height:25rpx;
-
-    width:25rpx;
+    left: 10px;
+    top: 8px;
+    color: #B2B2B2;
+    width: 22px;
+    height: 22px;
 }
-.search-left input{
-    display: inline-block;
-    flex-basis: auto;
-    height: 80rpx;
-    font-size: 17pt;
+.weui-search-bar_input {
+    padding: 4px 0;
+    width: 100%;
+    height: 1.42857143em;
+    border: 0;
+    font-size: 14pt;
+    line-height: 1.42857143em;
+    box-sizing: content-box;
 }
-.search-placeholder{
-    color: #8CCEFD;
-    /*line-height: 20rpx;*/
-}
-
-.search-left image{
-    display: inline-block;
-    flex-basis: auto;
-    width: 40rpx;
-    height: 40rpx;
-    padding: 15rpx 15rpx 15rpx 20rpx;
-}
-
-.search-right{
-    flex: 1;
-}
-.search-right image{
-    width: 45rpx;
-    height: 45rpx;
-    padding: 10rpx;
+.weui-icon-clear{
+    position: absolute;
+    top: 6px;
+    right: 10px;
+    width: 20px;
+    height: 20px;
+    /*padding: 0 10px;*/
+    /*line-height: 28px;*/
+    color: #B2B2B2;
+    /*font-size: 14px;*/
 }
 
 .icon{
@@ -77,12 +141,14 @@
     display: flex;
     flex-direction: row;
     height: 80rpx;
-    margin-left: 30rpx;
+    margin-left: 20rpx;
     align-items: center;
+
 }
 
 .result-text {
     font-size: 14pt;
+
 }
 
 .result-text-right:before
@@ -101,12 +167,23 @@
 
 .right {
     position: absolute;
-    right: 0rpx;
+    right: 20rpx;
+    width: 28rpx;
+    height: 28rpx;
+    top:150rpx;
+
 
 }
-
+.result-image-search{
+    position: relative;
+    /*left: 10px;*/
+    /*top: 8px;*/
+    color:#B2B2B2;
+    width: 22px;
+    height: 22px;
+}
 .result-tag-view {
-    border-top: 2rpx solid #ccc;
+    border-bottom: 2rpx solid #ccc;
 }
 /*hot*/
 
