--- a/app.wxss
+++ b/app.wxss
@@ -1,6 +1,5 @@
 page {
     font-family: -apple-system-font, 'Helvetica Neue', Helvetica, 'Microsoft YaHei', sans-serif;
-    font-family:;
     background-color: #fff;
     display: flex;
     flex-direction: column;
@@ -19,9 +18,6 @@ page {
     text-align: center;
 }
 
-.page-body {
-
-}
 
 /* globe*/
 
@@ -31,7 +27,13 @@ page {
 }
 
 
-/*recipe list 这玩意不合理啊, 最后总表不要爆?*/
+/*recipe list */
+.recipe-list-body {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+}
+
 
 .recipe-list-body {
     display: flex;
@@ -65,58 +67,17 @@ page {
 
 .recipeFull .title {
     color: #fff;
-    font-size: 35rpx;
+    font-size: 14pt;
 }
 
 .recipeFull .subtitle{
     color: #fff;
-    font-size: 25rpx;
+    font-size: 13pt;
 }
 
 /**/
 
-.item {
-    display: flex;
-    padding: 20rpx 40rpx;
-    border-bottom: 1rpx solid #eee;
-    cursor: pointer;
-}
 
-.item .poster {
-    width: 128rpx;
-    height: 128rpx;
-    margin-right: 20rpx;
-}
-
-.item .meta {
-    flex: 1;
-}
-
-.item .meta .title,
-.item .meta .sub-title {
-    display: block;
-    margin-bottom: 15rpx;
-}
-
-.item .meta .title {
-    font-size: 32rpx;
-}
-
-.item .meta .sub-title {
-    font-size: 22rpx;
-    color: #c0c0c0;
-}
-
-.item .meta .artists {
-    font-size: 26rpx;
-    color: #999;
-}
-
-.item .rating {
-    font-size: 28rpx;
-    font-weight: bold;
-    color: #f74c31;
-}
 
 .tips {
     font-size: 28rpx;
