用refresh（）方法来复用，onLoad，onShow都是一套。 upper刷新和loardmore加载更多 在pc端都不显示，手机端正常。 调整了搜索框图标的位置。尽量不用ab用re定位。

--- a/pages/recipe/recipe.wxml
+++ b/pages/recipe/recipe.wxml
@@ -13,7 +13,7 @@
 </loading>
 <block>
 <view wx:if="{{loaded}}">
-    <scroll-view scroll-y="true" wx:if="{{recipe.title}}" bindscrolltolower="loadMore">
+    <scroll-view scroll-y="true" wx:if="{{recipe.title}}" bindscrolltolower="loadMore" bindscrolltoupper="upper" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
 
 
         <view class="head">
